test/spec_vectors/simd_i8x16_arith/fail/module_7.wat
(module (func $i8x16.sub-1st-arg-empty (result v128) (i8x16.sub (v128.const i8x16 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0))))